<resources>
    <!--    <string name=""></string>-->
    <string name="app_name">LeTranscodeur</string>
    <string name="loualInd">le transcodeur</string>
    <string name="trns_logo">Par LouAl Industries</string>
    <string name="bvn">Bienvenue dans le Transcodeur</string>
    <string name="bvn2">Version mobile.</string>
    <string name="bvn3">Cette petite application vous permet</string>
    <string name="bvn4">de chiffrer vos messages grâce</string>
    <string name="bvn5">à une clef de chiffrement.</string>
    <string name="bvn6">Amusez-vous bien! </string>
    <string name="bouton_lancer">Utiliser le transcodeur! </string>
    <string name="txt_encoder">texte à ENcoder</string>
    <string name="txt_decoder">texte à DEcoder</string>
    <string name="txt_clef">clef - générer en une si vous n\'en avez pas</string>
    <string name="tooltip_encoder">Entrez ici le message que vous voulez encoder</string>
    <string name="tooltip_decoder">Entrez ici le message déjà encodé que vous voulez décrypter</string>
    <string name="tooltip_clef">Mettez votre clef de chiffrement ici, ou générez en une</string>
    <string name="boutonGenerer">Générer une clef</string>
    <string name="boutonSauver">Sauvegarder la clef</string>
    <string name="entrerNom">Entrez le nom de votre clef</string>
    <string name="titreEntrerNom">Nom de la clef</string>
    <string name="sauver">Sauver</string>
    <string name="annuler">Annuler</string>
    <string name="OK">OK</string>
    <string name="titreNomVide">Nom vide</string>
    <string name="nomVide">Vous devez entrer un nom pour pouvoir enregistrer votre clef</string>
    <!--    <string name="baseClef">BaseClef</string>-->
    <string name="erreurInsertion">La clef n\'a pas pu être sauvegardée.</string>
    <string name="titreErreurInsertion">Erreur DAO-I</string>
    <string name="reussiteInsertion">La clef a été correctement sauvegardée.</string>
    <string name="titreReussiteInsertion">Sauvegarde réussie !</string>
    <string name="titreErreurClefVide">Erreur de clef - vi</string>
    <string name="erreurClefVide">Il n\'y a pas de clef valide dans le champ correspondant !</string>
    <string name="titreClefInvalide">Erreur de clef - iv</string>
    <string name="messageClefInvalide">La clef n\'est pas dans un format valide</string>
    <string name="gestionClefs">Gestion des clefs</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="conseilClair">La clef n\'est pas valide, vous ne pouvez décoder ou encoder des messages.</string>
    <string name="conseilCrypt">Entrez une clef valide ou générez en une pour pouvoir utiliser l\'application.</string>
    <string name="vide" />
    <string name="titreErreurModif">Erreur DAO-M-GC</string>
    <string name="messageErreurModif">Il y a eu une erreur lors de la modification de la clef.</string>
    <string name="titreReussiteModif">Clef modifiée!</string>
    <string name="messageReussiteModif">La clef à bien été modifiée!</string>
    <string name="titreErreurSuppression">Erreur DAO-S-GC</string>
    <string name="messageErreurSuppression">Il y a eu une erreur lors de la tentative de supression.</string>
    <string name="titreSuppressionReussie">Suppression de la clef réussie!</string>
    <string name="messageSuppressionReussie">Vous avez supprimé la clef !</string>
    <string name="messageGestionClefs">Ici, vous pouvez gérer vos clefs. Les modifier, les supprimer.Attention à la modification pouvant rendre vos clefs inutilisables.
        \/!\\ Si le bouton modifier est grisé, que la clef n\'est pas valide.\/!\\</string>
    <!--            <string name=""></string>-->
    <!--            <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->
    <!--        <string name=""></string>-->


</resources>