<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionClefs">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="383dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinnerDesClefs"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <EditText
            android:id="@+id/nomDeLaClef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/contenuDeLaClef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boutonModifier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="modifierLaClef"
                android:text="@string/modifier" />

            <Button
                android:id="@+id/boutonSupprimer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="supprimerLaClef"
                android:text="@string/supprimer" />
        </LinearLayout>

        <TextView
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:background="@drawable/fondbordures"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/messageGestionClefs"
            android:textSize="18dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>