<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeTranscodeur">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/chmpClair"
            android:layout_width="313dp"
            android:layout_height="150dp"
            android:ems="10"
            android:hint="@string/txt_encoder"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/chmpCrypte"
            android:layout_width="313dp"
            android:layout_height="132dp"
            android:ems="10"
            android:hint="@string/txt_decoder"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/chmpClef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_clef"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boutonGenerer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/boutonGenerer" />

            <ImageButton
                android:id="@+id/boutonSauver"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/ic_menu_save"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/spinnerClef"
                android:layout_width="188dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/copieClair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="92dp"
        android:minHeight="48dp"
        android:onClick="copierClair"
        app:layout_constraintBottom_toTopOf="@+id/copieCrypte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/actionModeCopyDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/copieCrypte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:minHeight="48dp"
        android:onClick="copierCrypte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="?attr/actionModeCopyDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/copieClef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:minHeight="48dp"
        android:onClick="copierClef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copieCrypte"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="?attr/actionModeCopyDrawable"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>